gitlab/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gitlab.claytonc.dev`)
      kind: Rule
      services:
      - name: gitlab-webservice-default
        port: 8181
  #    middlewares:
  #      - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: gitlab-tls
